# Synapsis

./: .env  .gitignore  README.md  client_sample.py  conversation_handle.py  conversation_handler.py  environment.yml  fastapi_sample.py  final_llm.py  interview_analysis.json  pyproject.toml  python_fastapi_sample.py  responses.json  run.sh  stop.sh  talker.py  test.py
backend/: backend.py  final_metrics.py
frontend/: index.html  package-lock.json  package.json  script.sh
frontend/public/: interview_analysis.json
frontend/src/: App.css  App.jsx  ClarificationChat.jsx  index.css  main.jsx
frontend/src/app/: globals.css
frontend/src/components/: CodingInterface.css  CodingInterface.jsx  HomeScreen.css  HomeScreen.jsx  Landing.css  Landing.tsx  LoginButton.jsx  LogoutButton.jsx  RecordingsPage.css  RecordingsPage.jsx  UserProvider.jsx  chat-interface.tsx
frontend/src/components/lib/utils/: audio.ts  client.ts
frontend/src/components/ui/: accordion.tsx  button.tsx  card.tsx  input.tsx  interview-analysis.tsx  select.tsx  slider.tsx  switch.tsx
generic-frontend/: interview_analysis.json
generic-frontend/public/: interview_analysis.json
generic-frontend/src/app/: chat-interface.tsx
generic-frontend/src/components/ui/: session-metrics.tsx
output/: item_B3yCarkvhFqI2kb06TbUf_0.audio_transcript.txt
src/services/: codeRunner.js
