[project]
name = "tinterview"
version = "0.1.0"
requires-python = "==3.12.9"
dependencies = [
    "fastapi>=0.115.8",
    "langchain-openai>=0.3.6",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pydub>=0.25.1",
    "requests>=2.32.3",
    "setuptools>=75.8.0",
    "sounddevice>=0.5.1",
    "uvicorn>=0.34.0",
    "webrtcvad>=2.0.10",
    "websockets>=15.0",
]
