[project]
name = "tinterview"
version = "0.1.0"
requires-python = ">3.12"
dependencies = [
    "azure-identity>=1.20.0",
    "fastapi>=0.115.8",
    "langchain>=0.3.19",
    "langchain-community>=0.3.18",
    "langchain-openai>=0.3.6",
    "loguru>=0.7.3",
    "openai>=1.63.2",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pydub>=0.25.1",
    "requests>=2.32.3",
    "setuptools>=75.8.0",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
    "uvicorn>=0.34.0",
    "webrtcvad>=2.0.10",
    "websockets>=15.0",
]
